# rp2040-usb-microphone

./: CMakeLists.txt  README.md  i2s_pio_input.c  i2s_pio_input.h  i2s_rx.pio  main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c  usb_microphone.h
.github/workflows/: build.yml
